# PhantomGuard

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RUST.md  advanced_security_analyzer.sh  core_requirements.txt  pyproject.toml  requirements.txt  setup.py  system_security_checker.sh  system_vulnerability_scanner.sh
.github/workflows/: ci.yml
docs/: API.md  LIBRARY_USAGE.md  PERFOMANCE.md  TROUBLESHOOTING.md
rust/phantomguard/: DEVELOPMENT.md  EXAMPLE.md  PROJECT-PLAN.md  README.md  RUST-COMPONENTS.md  pyproject.toml  requirements-dev.txt  setup.py
rust/phantomguard/rust/phantomguard/: Cargo.toml
rust/phantomguard/src/phantomguard/: __init__.py
rust/phantomguard/src/phantomguard/cli/: main.py
rust/phantomguard/src/phantomguard/core/: rusty_analyzer.py
rust/phantomguard/tests/: __init__.py
rust/phantomguard/tests/python/: __init__.py  test_rusty_analyzer.py
rust/rootkithunter/: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  EXAMPLE.md  PROJECT-PLAN.md  README.md  pyproject.toml  requirements.txt  setup.py
rust/rootkithunter/rust/rootkithunter/: Cargo.toml
rust/rootkithunter/rust/rootkithunter/src/: lib.rs
rust/rootkithunter/src/rootkithunter/cli/: __init__.py  main.py
rust/rootkithunter/src/rootkithunter/core/: __init__.py  rusty_analyzer.py
src/phantomguard/advanced_analyzer/: analyzer.py
src/rootkithunter/: __init__.py  main.py
src/rootkithunter/advanced_analyzer/: __init__.py  analyzer.py
src/rootkithunter/utils/: __init__.py  common.py
tests/: conftest.py  test_main.py
tests/utils/: test_common.py
