[package]
name = "phantomguard-rs"
version = "0.1.0"
edition = "2021"
authors = ["Security Tools Team <security@example.com>"]
description = "Performance-critical components for the PhantomGuard tool"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.2", features = ["derive"] }
procfs = "0.15"
nix = "0.26"
